<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_normal">

    <LinearLayout
        android:id="@+id/content_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Text.Default.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            style="@style/Text.Black.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sin Soklyhoi"
            android:textAlignment="textEnd"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_name">

        <TextView
            style="@style/Text.Default.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth" />

        <TextView
            style="@style/Text.Black.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="12/12/1992"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_nationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_dob">

        <TextView
            style="@style/Text.Default.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationality" />

        <TextView
            style="@style/Text.Black.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Khmer"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_occupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_nationality">

        <TextView
            style="@style/Text.Default.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occupation" />

        <TextView
            style="@style/Text.Black.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Mobile Developer"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_family_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_occupation">

        <TextView
            style="@style/Text.Default.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_book" />

        <TextView
            style="@style/Text.Black.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="01283437234"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_family_book">

        <TextView
            style="@style/Text.Default.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permanent_address" />

        <TextView
            style="@style/Text.Black.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="Toul Sangke 1, Toul Sangke, Russey Keo, Phnom Penh"
            android:textAlignment="textEnd"
            tools:targetApi="o" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>