<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <include
        android:id="@+id/incl_toolbar"
        layout="@layout/tb_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing_medium" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing_medium" />

    <TextView
        android:id="@+id/txt_choose_address"
        style="@style/Text.Black.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/please_choose_your_address"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/incl_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_province"
        style="@style/Input.AutoComplete.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/txt_choose_address">

        <AutoCompleteTextView
            android:id="@+id/input_province"
            style="@style/Input.AutoComplete.Normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:completionThreshold="1"
            android:hint="@string/select_your_province"
            android:imeOptions="actionNext"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_district"
        style="@style/Input.AutoComplete.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_province">

        <AutoCompleteTextView
            android:id="@+id/input_district"
            style="@style/Input.AutoComplete.Normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:completionThreshold="1"
            android:hint="@string/select_your_district"
            android:imeOptions="actionNext"
            android:inputType="none"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_commune"
        style="@style/Input.AutoComplete.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_district">

        <AutoCompleteTextView
            android:id="@+id/input_commune"
            style="@style/Input.AutoComplete.Normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:completionThreshold="1"
            android:hint="@string/select_your_commune"
            android:imeOptions="actionNext"
            android:inputType="none"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_village"
        style="@style/Input.AutoComplete.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_commune">

        <AutoCompleteTextView
            android:id="@+id/input_village"
            style="@style/Input.AutoComplete.Normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:completionThreshold="1"
            android:hint="@string/select_your_village"
            android:imeOptions="actionNext"
            android:inputType="none"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        style="@style/Button.Default.Normal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_huge"
        android:layout_marginBottom="@dimen/spacing_large"
        android:text="@string/next"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right" />

</androidx.constraintlayout.widget.ConstraintLayout>