<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.PersonalInformationFragment">

    <TextView
        android:id="@+id/txt_personal_info"
        style="@style/Text.Black.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/personal_information"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/spacing_small"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_personal_info">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/spacing_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/spacing_medium" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_username"
                style="@style/Input.Default.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:hint="@string/what_is_your_username"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_nickname"
                style="@style/Input.Default.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:hint="@string/what_is_your_nickname"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_latinname"
                style="@style/Input.Default.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_nickname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_latinname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:hint="@string/what_is_your_latin_name"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_dob"
                style="@style/Input.Default.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_latinname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_dob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:hint="@string/when_were_you_born"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_gender"
                style="@style/Input.AutoComplete.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_dob">

                <AutoCompleteTextView
                    android:id="@+id/input_gender"
                    style="@style/Input.AutoComplete.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:hint="@string/which_is_your_gender"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_ethnicity"
                style="@style/Input.Default.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_gender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_ethnicity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:hint="@string/what_is_your_ethnicity"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_nationality"
                style="@style/Input.Default.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_ethnicity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:hint="@string/what_is_your_nationality"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_occupation"
                style="@style/Input.Default.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_nationality">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_occupation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:hint="@string/what_is_your_occupation"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_education"
                style="@style/Input.Default.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_occupation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_education"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:hint="@string/what_is_your_education_level"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_birth_letter"
                style="@style/Input.Default.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_education">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_birth_letter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:hint="@string/what_is_your_birth_certificate"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_resident_book"
                style="@style/Input.Default.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_birth_letter">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_resident_book"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:hint="@string/what_is_your_resident_book"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_family_book"
                style="@style/Input.Default.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_resident_book">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_family_book"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:hint="@string/what_is_your_family_book"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>